plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}


group = 'ProjetAstra'


repositories {
    mavenCentral()
}


dependencies {
    // JUnit 4
    testImplementation 'junit:junit:4.13.2'
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


javafx {
    version = '21.0.11'
    modules = ['javafx.controls', 'javafx.fxml']
}


application {
    mainClass = 'astra.Main'
}


startScripts {
    doLast {
        windowsScript.text = windowsScript.text.replace(
            'set DEFAULT_JVM_OPTS=',
            'set DEFAULT_JVM_OPTS="--add-modules" "javafx.controls,javafx.fxml,javafx.graphics" '
        )
        unixScript.text = unixScript.text.replace(
            'DEFAULT_JVM_OPTS=""',
            'DEFAULT_JVM_OPTS="--add-modules javafx.controls,javafx.fxml,javafx.graphics"'
        )
    }
}


// Configure gradle pour prendre system.in comme entrée
tasks.run.configure {
    standardInput = System.in
}


test {
    useJUnit()

    testLogging {
        events 'passed', 'failed', 'skipped'
    }
}


run {
    jvmArgs = [
        "-Dprism.forceGPU=true",
    ]
}

// Configuration de la création du jar complet
tasks.named('jar', Jar) {
    manifest {
        attributes(
            'Main-Class': 'astra.Launcher'
        )
    }
    
    // Inclusion des dépendances dans le jar dont javafx
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}